welcome.lessons.welcome.methods.picture.PictureMono3.scala.error
PictureMono3:30: error: not found: value faireLigne
faireLigne();
^